--- a/Huddle-Landing-Page/sass/components/footer.scss
+++ b/Huddle-Landing-Page/sass/components/footer.scss
@@ -1,6 +1,7 @@
 footer {
   background: rgb(29, 29, 29);
   color: $white;
+  max-width: 100%;
 }
 
 .footer {
