--- a/Huddle-Landing-Page/sass/layout.scss
+++ b/Huddle-Landing-Page/sass/layout.scss
@@ -1,6 +1,7 @@
 .u-container {
   width: 1140px;
   margin: 0 auto;
+  overflow-x: hidden;
   @media only screen and (max-width: 1140px) {
     width: 90%;
   }
